# autotrader

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.cursor/: mcp.json
deploy/guard/: guard.sh
deploy/launchd/: com.autotrader.collector.plist  com.autotrader.guard.plist  com.autotrader.heartbeat.plist  com.autotrader.papertrader.plist
research/: crash_model_results.json  crash_model_results_z3.json  short_term_study_exploratory.json  short_term_study_results.json  strategy_battery_results.json  swing_robustness.json  swing_screen_results.json  swing_screen_wide_results.json
results/candle_study/: fee_survivability.json
results/model_search/: final_report.json  phase2_results.csv  phase2_top10.csv  phase3_results.csv  phase3_top10.csv  phase4_results.csv  phase4_top5.csv  phase5_results.csv  phase5_top5.csv
results/model_search_v2/: expanding_oos.json  stream_c_results.json
scripts/: backfill_candles.py  candle_study.py  crash_model_study.py  extract_features.py  heartbeat.py  historical_backfill.py  influx_audit.py  jetson_export.py  jetson_sync.sh  live_collector.py  model_search.py  model_search_v2.py  paper_trader.py  short_term_study.py  strategy_battery.py  swing_inventory.py  swing_robustness.py  train_best_model.py
src/: config.py  main.py
src/dashboard/: app.py
src/data/: collector.py  indicators.py  influx_client.py  store.py
src/execution/: coinbase.py  executor.py  orders.py  paper.py
src/llm/: client.py  parser.py  prompts.py
tests/: test_paper.py  test_paper_trader_signals.py  test_parser.py  test_risk.py
(+16 files in other folders)
