[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-trader"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt",
    "pandas",
    "numpy",
    "lightgbm",
    "scikit-learn",
    "pydantic",
    "pyyaml",
    "python-dotenv",
    "pyarrow",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
torch = ["torch"]
influx = ["influxdb-client"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
